# theoretical-minimum

./: .gitignore  README.md  pyproject.toml
docs/book1/lecture-01/: exercise-01.md  exercise-01.tex  exercise-02.md  exercise-02.tex  exercise-03.md  exercise-03.tex
docs/book1/lecture-01/interlude-01/: exercise-01.md  exercise-01.tex  exercise-02.md  exercise-02.tex  exercise-03.md  exercise-03.tex  exercise-04.tex  exercise-05.tex  exercise-06.tex
docs/book1/lecture-02/: exercise-01.tex  exercise-02.tex  exercise-03.tex  exercise-04.tex  exercise-05.tex  exercise-06.tex  exercise-07.tex  exercise-08.tex
src/theoretical_minimum/: __init__.py
src/theoretical_minimum/book1/: __init__.py
src/theoretical_minimum/book1/lecture_01/: __init__.py  exercise_01.py  exercise_02.py  exercise_03.py
src/theoretical_minimum/book1/lecture_02/: __init__.py  exercise_01.py  exercise_02.py  exercise_03.py  exercise_04.py  (+4 more)
tests/: test_package_imports.py
tests/book1/: test_lecture_01_exercise_01.py  test_lecture_01_exercise_02.py  test_lecture_01_exercise_03.py  test_lecture_01_interlude_01_exercise_01.py  test_lecture_01_interlude_01_exercise_02.py  test_lecture_01_interlude_01_exercise_03.py  test_lecture_01_interlude_01_exercise_04.py  test_lecture_01_interlude_01_exercise_05.py  test_lecture_01_interlude_01_exercise_06.py  test_lecture_02_exercise_01.py  test_lecture_02_exercise_02.py  test_lecture_02_exercise_03.py  test_lecture_02_exercise_04.py  test_lecture_02_exercise_05.py  test_lecture_02_exercise_06.py  test_lecture_02_exercise_07.py  test_lecture_02_exercise_08.py
(+7 files in other folders)
